<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".ui.info.InfoImageFragment">

    <data>
        <import type="android.graphics.drawable.Drawable"/>
        <variable
                name="data"
                type="by.psu.nasaapi.model.Apod"/>
        <variable
                name="imageRequestListener"
                type="com.bumptech.glide.request.RequestListener&lt;Drawable&gt;" />
    </data>

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/infoApodImg"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/info_apod_height_img"
                    android:transitionName="@string/infoApodImgTransitionName"
                    tools:src="@tools:sample/backgrounds/scenic[1]"
                    app:imageUrl="@{data.url}"
                    app:imageRequestListener="@{imageRequestListener}"
                    android:contentDescription="@string/apodImgDescription"
                    android:layout_marginBottom="@dimen/spacing_normal_dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/infoApodTitleTV" android:scaleType="centerCrop"/>
            <TextView
                    android:id="@+id/infoApodTitleTV"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:text="@string/cell_apod_title"
                    android:text="@{data.title}"
                    android:layout_marginStart="@dimen/spacing_large_dp"
                    android:layout_marginTop="@dimen/spacing_normal_dp"
                    android:layout_marginEnd="@dimen/spacing_large_dp"
                    android:layout_marginBottom="@dimen/spacing_normal_dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/infoApodImg"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/infoApodExplanationTV"/>
            <TextView
                    android:id="@+id/infoApodExplanationTV"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:text="@string/info_apod_explanation"
                    android:text="@{data.explanation}"
                    android:layout_marginStart="@dimen/spacing_large_dp"
                    android:layout_marginTop="@dimen/spacing_normal_dp"
                    android:layout_marginEnd="@dimen/spacing_large_dp"
                    android:layout_marginBottom="@dimen/spacing_normal_dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/infoApodTitleTV"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/infoDividerDownload"/>
            <View
                    android:id="@+id/infoDividerDownload"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider"
                    android:layout_marginStart="@dimen/spacing_large_dp"
                    android:layout_marginTop="@dimen/spacing_normal_dp"
                    android:layout_marginEnd="@dimen/spacing_large_dp"
                    android:layout_marginBottom="@dimen/spacing_normal_dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/infoApodExplanationTV"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/infoTitleDownloadSection"/>
            <TextView
                    android:id="@+id/infoTitleDownloadSection"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/info_title_download_section"
                    android:layout_marginStart="@dimen/spacing_large_dp"
                    android:layout_marginTop="@dimen/spacing_normal_dp"
                    android:layout_marginEnd="@dimen/spacing_large_dp"
                    android:layout_marginBottom="@dimen/spacing_normal_dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/infoDividerDownload"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/infoLabelNormal"/>
            <TextView
                    android:id="@+id/infoLabelNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_label_normal"
                    android:layout_marginStart="@dimen/spacing_large_dp"
                    android:layout_marginTop="@dimen/spacing_normal_dp"
                    android:layout_marginEnd="@dimen/spacing_normal_dp"
                    android:layout_marginBottom="@dimen/spacing_normal_dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/infoTitleDownloadSection"
                    app:layout_constraintEnd_toStartOf="@+id/infoApodUrlTV"
                    app:layout_constraintBottom_toTopOf="@+id/infoLabelHD"/>
            <TextView
                    android:id="@+id/infoApodUrlTV"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:text="@string/apodUrl"
                    android:text="@{data.url}"
                    android:singleLine="true"
                    android:layout_marginStart="@dimen/spacing_normal_dp"
                    android:layout_marginEnd="@dimen/spacing_large_dp"
                    app:layout_constraintStart_toEndOf="@+id/infoLabelNormal"
                    app:layout_constraintTop_toTopOf="@+id/infoLabelNormal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="@+id/infoLabelNormal" android:autoLink="web"
                    android:ellipsize="end"/>
            <TextView
                    android:id="@+id/infoLabelHD"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_label_hd"
                    android:layout_marginStart="@dimen/spacing_large_dp"
                    android:layout_marginTop="@dimen/spacing_normal_dp"
                    android:layout_marginEnd="@dimen/spacing_normal_dp"
                    android:layout_marginBottom="@dimen/spacing_normal_dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/infoLabelNormal"
                    app:layout_constraintEnd_toStartOf="@+id/infoApodHDUrlTV"
                    app:layout_constraintBottom_toTopOf="@+id/infoDividerCopySection"/>
            <TextView
                    android:id="@+id/infoApodHDUrlTV"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:text="@string/apodUrl"
                    android:text="@{data.hdUrl}"
                    android:singleLine="true"
                    android:layout_marginStart="@dimen/spacing_normal_dp"
                    android:layout_marginEnd="@dimen/spacing_large_dp"
                    app:layout_constraintStart_toEndOf="@+id/infoLabelHD"
                    app:layout_constraintTop_toTopOf="@+id/infoLabelHD"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="@+id/infoLabelHD" android:autoLink="web"
                    android:ellipsize="end"/>
            <View
                    android:id="@+id/infoDividerCopySection"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider"
                    android:layout_marginStart="@dimen/spacing_large_dp"
                    android:layout_marginTop="@dimen/spacing_normal_dp"
                    android:layout_marginEnd="@dimen/spacing_large_dp"
                    android:layout_marginBottom="@dimen/spacing_normal_dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/infoLabelHD"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/infoApodCopyRight"/>
            <TextView
                    android:id="@+id/infoApodCopyRight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:text="@string/cell_apod_copyright"
                    android:text="@{data.copyright}"
                    android:layout_marginStart="@dimen/spacing_large_dp"
                    android:layout_marginTop="@dimen/spacing_normal_dp"
                    android:layout_marginEnd="@dimen/spacing_normal_dp"
                    android:layout_marginBottom="@dimen/spacing_normal_dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/infoDividerCopySection"
                    app:layout_constraintEnd_toStartOf="@+id/infoApodDate"
                    app:layout_constraintBottom_toBottomOf="parent"/>
            <TextView
                    android:id="@+id/infoApodDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/cell_apod_date"
                    android:text="@{data.date}"
                    android:layout_marginStart="@dimen/spacing_normal_dp"
                    android:layout_marginEnd="@dimen/spacing_large_dp"
                    app:layout_constraintStart_toEndOf="@+id/infoApodCopyRight"
                    app:layout_constraintTop_toTopOf="@+id/infoApodCopyRight"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="@+id/infoApodCopyRight"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</layout>