<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".ui.info.InfoVideoFragment">
    <data>
        <variable
                name="apodVideo"
                type="by.psu.nasaapi.model.Apod"/>
    </data>

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <WebView
                    android:id="@+id/apodVideoView"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/info_apod_height_img"
                    android:layout_marginBottom="@dimen/spacing_normal_dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/infoApodVideoTitle"/>
            <TextView
                    android:id="@+id/infoApodVideoTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:text="@string/cell_apod_title"
                    android:text="@{apodVideo.title}"
                    android:layout_marginStart="@dimen/spacing_large_dp"
                    android:layout_marginTop="@dimen/spacing_normal_dp"
                    android:layout_marginEnd="@dimen/spacing_large_dp"
                    android:layout_marginBottom="@dimen/spacing_normal_dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/apodVideoView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/infoApodVideoExplanation"/>
            <TextView
                    android:id="@+id/infoApodVideoExplanation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:text="@string/info_apod_explanation"
                    android:text="@{apodVideo.explanation}"
                    android:layout_marginStart="@dimen/spacing_large_dp"
                    android:layout_marginTop="@dimen/spacing_normal_dp"
                    android:layout_marginEnd="@dimen/spacing_large_dp"
                    android:layout_marginBottom="@dimen/spacing_normal_dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/infoApodVideoTitle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/infoDividerSource"/>
            <View
                    android:id="@+id/infoDividerSource"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider"
                    android:layout_marginStart="@dimen/spacing_large_dp"
                    android:layout_marginTop="@dimen/spacing_normal_dp"
                    android:layout_marginEnd="@dimen/spacing_large_dp"
                    android:layout_marginBottom="@dimen/spacing_normal_dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/infoApodVideoExplanation"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/infoLabelSource"/>
            <TextView
                    android:id="@+id/infoLabelSource"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/info_video_label_source"
                    android:layout_marginStart="@dimen/spacing_large_dp"
                    android:layout_marginTop="@dimen/spacing_normal_dp"
                    android:layout_marginEnd="@dimen/spacing_large_dp"
                    android:layout_marginBottom="@dimen/spacing_normal_dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/infoDividerSource"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/infoLabelUrl"/>
            <TextView
                    android:id="@+id/infoLabelUrl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_video_label_url"
                    android:layout_marginStart="@dimen/spacing_large_dp"
                    android:layout_marginTop="@dimen/spacing_normal_dp"
                    android:layout_marginEnd="@dimen/spacing_normal_dp"
                    android:layout_marginBottom="@dimen/spacing_normal_dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/infoLabelSource"
                    app:layout_constraintEnd_toStartOf="@+id/infoApodVideoUrl"
                    app:layout_constraintBottom_toTopOf="@+id/infoDividerCopy"/>
            <TextView
                    android:id="@+id/infoApodVideoUrl"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:text="@string/apodUrl"
                    android:text="@{apodVideo.url}"
                    android:autoLink="web"
                    android:layout_marginStart="@dimen/spacing_normal_dp"
                    android:layout_marginEnd="@dimen/spacing_normal_dp"
                    app:layout_constraintStart_toEndOf="@+id/infoLabelUrl"
                    app:layout_constraintTop_toTopOf="@+id/infoLabelUrl"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="@+id/infoLabelUrl" android:singleLine="true"
                    android:ellipsize="end"/>
            <View
                    android:id="@+id/infoDividerCopy"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider"
                    android:layout_marginStart="@dimen/spacing_large_dp"
                    android:layout_marginTop="@dimen/spacing_normal_dp"
                    android:layout_marginEnd="@dimen/spacing_large_dp"
                    android:layout_marginBottom="@dimen/spacing_normal_dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/infoLabelUrl"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/infoApodVideoDate"/>
            <TextView
                    android:id="@+id/infoApodVideoDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:text="@string/cell_apod_date"
                    android:text="@{apodVideo.date}"
                    android:layout_marginStart="@dimen/spacing_large_dp"
                    android:layout_marginTop="@dimen/spacing_normal_dp"
                    android:layout_marginEnd="@dimen/spacing_large_dp"
                    android:layout_marginBottom="@dimen/spacing_normal_dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/infoDividerCopy"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>